@startuml interface_vs_abstract
skinparam classAttributeIconSize 0
skinparam defaultFontName "Segoe UI"
skinparam backgroundColor white
skinparam class {
  BackgroundColor #EEF2FF
  BorderColor #4A6CF7
}
skinparam interface {
  BackgroundColor #FFF8E1
  BorderColor #F59E0B
}

title Interfejs vs Klasa Abstrakcyjna

package "Interfejs" {
  interface Printable <<interface>> {
    + {abstract} print() : void
  }
}

package "Klasa abstrakcyjna" {
  abstract class AbstractShape {
    # color : String
    + {abstract} area() : double
    + describe() : String
  }
}

class Document {
  + print() : void
}
class Photo {
  + print() : void
}
class Circle {
  + area() : double
}
class Square {
  + area() : double
}

Document ..|> Printable
Photo    ..|> Printable
Circle   --|> AbstractShape
Square   --|> AbstractShape

note right of Printable
  Interfejs:
  - brak stanu (pol instancji)
  - wielokrotna implementacja
  - domyslnie public abstract
  - Java 8+: default, static
  - Java 9+: private
end note

note right of AbstractShape
  Klasa abstrakcyjna:
  - moze miec pola instancji
  - jedno dziedziczenie (extends)
  - moze miec konstruktory
  - moze miec metody konkretne
end note
@enduml
